# AgentSQL

./: .gitignore  LICENSE  README.md  system_context.md
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .env.example  pyrightconfig.json  requirements.txt  run.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: ai.py  connection.py  context.py  query.py
backend/app/core/: config.py  query_filter.py  security.py
backend/app/db/: connections.py  metadata.py
backend/app/llm/: context.py  router.py
backend/app/models/: requests.py  responses.py
backend/scripts/: build_sidecar.py
backend/tests/: test_connections.py  test_query_filter.py  test_routes.py
docs/superpowers/specs/: 2026-03-25-ui-redesign-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: gen_icons.py  icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: AIPanel.tsx  Editor.tsx  Layout.tsx  SQLEditor.tsx  Sidebar.tsx
frontend/src/components/modals/: ConfirmationModal.tsx  ConnectionModal.tsx  index.ts
frontend/src/services/: api.ts
frontend/src/stores/: index.ts
frontend/src/types/: index.ts
