[package]
name = "sgbd"
version = "0.4.0"
description = "SGBD - AI-Powered Database Management System"
authors = []
license = ""
repository = ""
edition = "2021"

[lib]
name = "sgbd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
